using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class HandAnimations
{
    public static string Right = "right";

    public static string MouseDown = "mouseDown";
    public static string MouseUp = "mouseUp";

    public static string MouseDownAngry = "mouseDownAngry";
    public static string MouseUpAngry = "mouseUpAngry";

    public static string MouseDownHit = "mouseDownHit";
    public static string MouseUpHit = "mouseUpHit";

    public static string Angry = "angry";
    public static string Ok = "ok";
    public static string ThumbUp = "thumbUp";
}
